--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "smart-brain",
+  "homepage": "https://myusername.github.io/smart-brain",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "clarifai": "^2.8.0",
+    "gh-pages": "^1.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-particles-js": "^2.3.0",
@@ -15,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {}
 }
